--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
         </ons-dialog>
     </template>
     <script src='https://unpkg.com/onsenui/js/onsenui.js'></script>
+    <script src="js/module.js"></script>
     <script src="js/main.js"></script>
     <script src="js/fn.js"></script>
     <script src="js/map.js"></script>
