--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <meta http-equiv="Content-Security-Policy"
@@ -20,6 +23,13 @@
     <!-- <script src="components/loader.js"></script> -->
     <!-- <script src="lib/onsenui/js/onsenui.min.js"></script> -->
     <script src='https://unpkg.com/onsenui/js/onsenui.js'></script>
+    <script>
+        if (window.navigator.standalone) {
+            // location.href = "";
+        } else {
+            document.write("このページをホームに追加してください");
+        }
+    </script>
 </head>
 
 <body onload="initMap()">
