--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <template id="tabbar.html">
         <ons-page id="tabbar">
             <ons-tabbar position="bottom">
+                <ons-tab page="register.html" label="登録" icon="ion">
+                </ons-tab>
                 <ons-tab page="maps.html" label="マップ" icon="ion-map" active>
                 </ons-tab>
                 <ons-tab page="setting.html" label="設定" icon="md-person">
@@ -45,13 +47,13 @@
         </ons-page>
     </template>
 
-    <!-- <template id="register.html">
+    <template id="register.html">
         <ons-page id="Register">
         Register
         </ons-page>
     </template>
 
-    <template id="login.html">
+    <!-- template id="login.html">
         <ons-page id="Login">
         Login
         </ons-page>
