🤩(coding): satokana image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <template id="tabbar.html">
         <ons-page id="tabbar">
             <ons-tabbar position="bottom">
-                <ons-tab page="register.html" label="登録" icon="ion">
+                <ons-tab page="title.html" label="登録" icon="ion">
                 </ons-tab>
                 <ons-tab page="maps.html" label="マップ" icon="ion-map" active>
                 </ons-tab>
@@ -49,12 +49,12 @@
 
     <template id="title.html">
         <ons-page id="Title">
-            <img>
-            <h1>タイトル</h1>
-            <p>概要</p>
-            <ons-button>登録</ons-button>
-            <ons-button>ログイン</ons-button>
-            <small>説明</small>
+            <img src="./img/sakana.jpg">
+            <h1>anato</h1>
+            <p>アナウンサーと会いたいですよね？<br>そんな時は、anatoで。<br>気軽に登録して、ランチに誘ってみませんか？</p>
+            <ons-button class="register">登録</ons-button>
+            <ons-button class="login">ログイン</ons-button>
+            <!-- <small class="agree">説明</small> -->
         </ons-page>
     </template>
 
