--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <template id="tabbar.html">
         <ons-page id="tabbar">
             <ons-tabbar position="bottom">
-                <ons-tab page="title.html" label="登録" icon="ion">
+                <ons-tab page="title.html" label="登録" icon="ion" active>
                 </ons-tab>
-                <ons-tab page="maps.html" label="マップ" icon="ion-map" active>
+                <ons-tab page="maps.html" label="マップ" icon="ion-map">
                 </ons-tab>
                 <ons-tab page="setting.html" label="設定" icon="md-person">
                 </ons-tab>
@@ -52,7 +52,7 @@
             <img src="./img/sakana.jpg">
             <h1>anato</h1>
             <p>アナウンサーと会いたいですよね？<br>そんな時は、anatoで。<br>気軽に登録して、ランチに誘ってみませんか？</p>
-            <ons-button class="register">登録</ons-button>
+            <ons-button class="register" onclick="">登録</ons-button>
             <ons-button class="login">ログイン</ons-button>
             <!-- <small class="agree">説明</small> -->
         </ons-page>
