--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
     <link rel='stylesheet' href='https://unpkg.com/onsenui/css/onsenui.css'>
     <link rel='stylesheet' href='https://unpkg.com/onsenui/css/onsen-css-components.css'>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js'></script> -->
-    <!-- <script src="js/bundle/fastclick.bundle.js"></script> -->
-    <!-- <script src="components/loader.js"></script> -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js'></script> -->
+    <script src="js/bundle/fastclick.js"></script>
+    <!-- <script src="components/loader.js"></script>
     <!-- <script src="lib/onsenui/js/onsenui.min.js"></script> -->
     <script src='https://unpkg.com/onsenui/js/onsenui.js'></script>
 </head>
 
 <body onload="initMap()">
-    <ons-navigator id="appNavigator">
+
+    <ons-navigator swipeable id="signNavigator" page="title.html">
         <ons-page>
             <ons-splitter id="appSplitter">
                 <ons-splitter-content page="tabbar.html"></ons-splitter-content>
             </ons-splitter>
         </ons-page>
     </ons-navigator>
+
 
     <template id="tabbar.html">
         <ons-page id="tabbar">
@@ -55,8 +57,8 @@
             <img src="./img/sakana.jpg">
             <h1>anato</h1>
             <p>アナウンサーと会いたいですよね？<br>そんな時は、anatoで。<br>気軽に登録して、ランチに誘ってみませんか？</p>
-            <ons-button class="register" onclick="">登録</ons-button>
-            <ons-button class="login">ログイン</ons-button>
+            <ons-button id="register-btn">登録</ons-button>
+            <ons-button id="login-btn">ログイン</ons-button>
             <!-- <small class="agree">説明</small> -->
         </ons-page>
     </template>
